@@ -46,6 +46,37 @@ extern "C" {
 
 #define IS_OCI_ERROR(v) (((v) != OCI_SUCCESS) && ((v) != OCI_SUCCESS_WITH_INFO))
 
+#if defined(__GNUC__) && ((__GNUC__ > 3) || (__GNUC__ == 3 && __GNUC_MINOR__ >= 1))
+/* gcc version >= 3.1 */
+#define ALWAYS_INLINE inline __attribute__((always_inline))
+#endif
+#ifdef _MSC_VER
+/* microsoft c */
+#define ALWAYS_INLINE __forceinline
+#endif
+
+#ifdef ALWAYS_INLINE
+/*
+ * I don't like cast because it can suppress warnings but may hide bugs.
+ * These macros make warnings when the source type is invalid.
+ */
+#define TO_ORATEXT to_oratext
+#define TO_CHARPTR to_charptr
+static ALWAYS_INLINE OraText *to_oratext(char *c)
+{
+  return (OraText*)c;
+}
+static ALWAYS_INLINE char *to_charptr(OraText *c)
+{
+  return (char*)c;
+}
+#else
+/* if not gcc, use normal cast. */
+#define TO_ORATEXT(c) ((OraText*)(c))
+#define TO_CHARPTR(c) ((char*)(c))
+#endif
+#define RSTRING_ORATEXT(obj) TO_ORATEXT(RSTRING_PTR(obj))
+
 enum oci8_bind_type {
   BIND_STRING,
   BIND_FIXNUM,
@@ -154,7 +185,7 @@ typedef struct oci8_string oci8_string_t;
 #define Get_String(obj, s) do { \
   if (!NIL_P(obj)) { \
     Check_Type(obj, T_STRING); \
-    s.ptr = RSTRING_PTR(obj); \
+    s.ptr = RSTRING_ORATEXT(obj); \
     s.len = RSTRING_LEN(obj); \
   } else { \
     s.ptr = NULL; \
