@@ -1,3 +1,11 @@
+2007-01-28  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oci8.h: add TO_ORATEXT, TO_CHARPTR and RSTRING_ORATEXT
+	    macros to suppress 'differ in signedness' warinings.
+	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c, ext/oci8/lob.c,
+	  ext/oci8/ocinumber.c, ext/oci8/oranumber.c, ext/oci8/server.c,
+	  ext/oci8/stmt.c: use TO_ORATEXT, TO_CHARPTR and RSTRING_ORATEXT
+	    macros to suppress 'differ in signedness' warinings.
+
 2007-01-20  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/oci8.rb.in: don't call OCIEnv.create when initializing.
 	* release as 1.0.0-rc1.
